<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="Choose">Choose Apps</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_monitor">Monitor</string>
    <string name="title_activity_test">Test</string>


    <string name="stage_5">Deliverd</string>
    <string name="stage_4">Out for delivery</string>
    <string name="stage_3">Shipped</string>
    <string name="stage_2">Confirmed</string>
    <string name="stage_1">Payment Complete</string>

    <string name="GoodiGo">TextInputLayout</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="login">Login</string>
    <string name="create_new">Click here for register</string>
    <string name="not_register">Not Register?</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="name_error">Please enter your name</string>
    <string name="phone_error">Please enter your phone number</string>
    <string name="email_error">Please enter your email address</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="password_error">Please enter a password</string>
    <string name="error_invalid_password">Please enter a minimum password of 6 characters</string>
    <string name="msg_no_items">"No matching items.\nTry using a different query."</string>
    <string name="msg_no_items_in_cart">"You do not have any items in your cart.\n\nAdd some items to place an order."</string>
    <string name="msg_load_order">Loading order details...</string>
    <string name="request_error">There was a problem while processing your request. Try again.</string>
    <string name="search">Search</string>
    <string name="cart">cart</string>
    <string name="item_name">Item Name</string>
    <string name="price">Price</string>
</resources>